--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: "/Type-on-Strap"
+baseurl: "https://apkstores.github.io"
 url: "https://apkstores.github.io"
 title: Type on Strap # site's title
 description: "A website with blog posts and pages" # used by search engines
